@@ -2,13 +2,13 @@ package org.togetherjava.tjbot.commands.utils;
 
 import net.dv8tion.jda.api.entities.Guild;
 import net.dv8tion.jda.api.entities.Message;
+import net.dv8tion.jda.api.interactions.commands.Command;
 import net.dv8tion.jda.api.interactions.components.ActionRow;
 import net.dv8tion.jda.api.interactions.components.buttons.Button;
+import net.dv8tion.jda.api.requests.RestAction;
 import net.dv8tion.jda.api.utils.MarkdownSanitizer;
-import org.togetherjava.tjbot.commands.help.CloseCommand;
 
 import java.util.List;
-import java.util.concurrent.atomic.AtomicLong;
 
 /**
  * Utility methods for {@link Message}.
@@ -61,25 +61,23 @@ public class MessageUtils {
 
     /**
      * Converts a slash command text to a mentioned slash command, which you can directly click on
-     * in Discord
+     * in Discord.
      *
-     * @param guild guild that owns the command
-     * @param command command name
-     * @return Formatted string for mentioned slash command
+     * @param guild the {@link Guild} that contains the command
+     * @param command the command's name
+     * @return Formatted string for the mentioned slash command
      * @throws IllegalArgumentException when the command name doesn't match with the guild's
      *         commands
      */
-    public static String mentionSlashCommand(Guild guild, String command) {
-        AtomicLong commandId = new AtomicLong();
-        guild.retrieveCommands()
-            .queue(commands -> commands.stream()
+    public static RestAction<String> mentionSlashCommand(Guild guild, String command) {
+        return guild.retrieveCommands().map(commands -> {
+            Command foundCommand = commands.stream()
                 .filter(c -> c.getName().equalsIgnoreCase(command))
                 .findFirst()
-                .ifPresentOrElse(c -> commandId.set(c.getIdLong()), () -> {
-                    throw new IllegalArgumentException("Command %s does not exist in guild %s"
-                        .formatted(command, guild.getId()));
-                }));
-        return String.format("</%s:%d>", command, commandId.get());
+                .orElseThrow(() -> new IllegalArgumentException(
+                        "Command %s does not exist in guild %s".formatted(command, guild.getId())));
+            return String.format("</%s:%d>", command, foundCommand.getIdLong());
+        });
     }
 
 }
